infrastructure/k8s/system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravity-hub-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: gravity-hub.io
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: application-cluster-ip
                port:
                  number: 3000
